--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,33 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.angeloraso.plugins.contacts">
+  package="com.angeloraso.plugins.contacts">
+
+  <uses-permission android:name="android.permission.READ_CONTACTS" />
+  <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+
+  <application>
+
+    <activity android:name=".CreateContactActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.CREATE_CONTACT_ACTIVITY" />
+        <category android:name="android.intent.category.DEFAULT" />
+      </intent-filter>
+    </activity>
+
+    <activity android:name=".AddToExistingContactActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.ADD_TO_EXISTING_CONTACT_ACTIVITY" />
+        <category android:name="android.intent.category.DEFAULT" />
+      </intent-filter>
+    </activity>
+
+    <activity android:name=".EditContactActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.EDIT_CONTACT_ACTIVITY" />
+        <category android:name="android.intent.category.DEFAULT" />
+      </intent-filter>
+    </activity>
+
+  </application>
+
 </manifest>
