Add exported attribute

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -7,21 +7,27 @@
 
   <application>
 
-    <activity android:name=".CreateContactActivity">
+    <activity 
+      android:name=".CreateContactActivity"
+      android:exported="false">
       <intent-filter>
         <action android:name="android.intent.action.CREATE_CONTACT_ACTIVITY" />
         <category android:name="android.intent.category.DEFAULT" />
       </intent-filter>
     </activity>
 
-    <activity android:name=".AddToExistingContactActivity">
+    <activity 
+      android:name=".AddToExistingContactActivity"
+      android:exported="false">
       <intent-filter>
         <action android:name="android.intent.action.ADD_TO_EXISTING_CONTACT_ACTIVITY" />
         <category android:name="android.intent.category.DEFAULT" />
       </intent-filter>
     </activity>
 
-    <activity android:name=".EditContactActivity">
+    <activity 
+      android:name=".EditContactActivity"
+      android:exported="false">
       <intent-filter>
         <action android:name="android.intent.action.EDIT_CONTACT_ACTIVITY" />
         <category android:name="android.intent.category.DEFAULT" />
